<resources>
    <string name="app_name">englandDates</string>
    <string name="Тюдоров">Эпоха Тюдоров	(1485—1558)</string>
    <string name="Елизаветинская">Елизаветинская эпоха	(1558—1603)</string>
    <string name="Стюартов">Эпоха Стюартов	(1603—1714)</string>
    <string name="Яковианская">Яковианская эпоха	(1603—1625)</string>
    <string name="Каролинская">Каролинская эпоха	(1625—1642)</string>
    <string name="ГражданскиеВ">Гражданские войны, республика и Протекторат	(1642—1660)</string>
    <string name="РеставрацияСтюартов">Реставрация Стюартов и Славная революция	(1660—1688)</string>
    <string name="Великобритания">Образование Великобритании	(1688—1714)</string>
    <string name="Георгианская">Георгианская эпоха	(1714—1811)</string>
    <string name="Регенство">Регентство	(1811—1830)</string>
    <string name="Викторианская">Викторианская эпоха	(1837—1901)</string>
    <string name="Эдвардианская">Эдвардианская эпоха	(1901—1910)</string>
    <string name="WOW1">Первая мировая война	(1914—1918)</string>
    <string name="Межвоенный">Межвоенный период	(1918—1939)</string>
    <string name="WOW2">Вторая мировая война	(1939—1945)</string>
    <string name="Послевоенная">Послевоенная Великобритания	(1945—1979)</string>
    <string name="Современная">Современная Великобритания	(1979—н.в.)</string>
    <string name="ПрограммИнфо">О программе</string>
    <string name="ТекстВью17">Гражданские войны, республика и Протекторат	(1642—1660)\n Английская революция, известная также как Английская гражданская война); — происходивший в 1649—1660 годах процесс перехода Англии от монархии к республике, закончившийся смертью протектора Кромвеля и реставрацией монархии.

Революция приняла форму конфликта исполнительной и законодательной властей (король против парламента), вылившегося в гражданскую войну, а также религиозной войны между англиканами, католиками и колеблющимися шотландскими пуританами с одной стороны, и английскими пуританами с другой. В Английской революции был заметен, хотя играл и второстепенную роль, также элемент национальной борьбы (между англичанами, валлийцами, шотландцами, ирландцами).

Первая гражданская война началась 22 августа 1642 г., когда Карл I приказал поднять своё знамя над Ноттингемским замком, а закончилась война в 1646 г., когда Кромвель создал «Армию нового образца», одержавшую решающую победу в сражении при Нейзби.

Гражданская война завершилась полной победой парламента.\n Терминология \n Термин «Английская гражданская война» является общеизвестным названием революции, однако историки часто разделяют её на 2 или 3 различные войны. Несмотря на то что понятие описывает события, происходившие в Англии, конфликт также включал в себя войны против Шотландии и Ирландии и их гражданские войны.

В отличие от других гражданских войн в Англии, по сути представляющих собой борьбу за власть, эта война затрагивала ещё и сам образ правления в Британии и Ирландии, и экономическую систему. Поэтому историки называют английскую гражданскую войну английской революцией. В марксистской историографии принято называть её «английской буржуазной революцией»</string>
    <string name="ПлантагенетовТекст">В эпоху Плантагенетов, Англонормандия была уникальным регионом, сочетающим английские и нормандские культуры. Этот период начался в 1066 году с завоевания Вильгельма Завоевателя, герцога Нормандии, Англией.

Под властью Плантагенетов, Англонормандская империя достигла своего расцвета. Культурный обмен между двумя регионами привел к появлению уникальной смеси нормандской и английской архитектуры, литературы и языка.

Важным элементом этого периода была изощренная рыцарская культура, которая процветала в Англонормандии. Рыцари были не только военными, но и защитниками и покровителями искусств и науки.

Под влиянием Плантагенетов, Англонормандия стала центром политической и экономической власти в Европе. Эпоха Плантагенетов также известна своими конфликтами и борьбой за власть между различными членами семьи.

Время Плантагенетов в Англонормандии оставило неизгладимый след в истории, оставив наследие в виде красивых замков. В эпоху Плантагенетов Англонормандия была настоящим "микс-королевством", где смешивались английская и нормандская культуры. Короли, такие как Вильгельм Завоеватель и Ричард Львиное Сердце, правили с рукой из железа, но с сердцем, полным романтики. Они строили крепости, проводили рыцарские турниры и развивали торговлю. Однако, со временем, эта эпоха сдерживала дыхание, готовясь к потрясающему переходу к следующей эре - эпохе Тюдоров! В это время король Генрих VIII с его желанием разводиться и часто менять жен, внес огромные изменения в английскую историю.</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Плантагенетов">Эпоха Плантагенетов	(1154—1485)</string>
</resources>