<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="Эпохи Английской истории"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="353dp"
        android:layout_height="541dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="49dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:clickable="true"
                android:text="@string/Плантагенетов"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:text="@string/Тюдоров"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:text="@string/Елизаветинская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView13"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="@string/Стюартов"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView5"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/Яковианская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView16"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:text="@string/Каролинская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView17"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/ГражданскиеВ"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView18"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:text="@string/РеставрацияСтюартов"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView19"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/Великобритания"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView20"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/Георгианская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView21"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/Регенство"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView22"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Викторианская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView23"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/Эдвардианская"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView24"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/WOW1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView25"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/Межвоенный"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView26"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/WOW2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView27"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/Послевоенная"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView28"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:text="@string/Современная"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:onClick="onClick"
        android:id="@+id/AboutButton"
        android:layout_width="288dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/ПрограммИнфо"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>